--- a/app/src/main/res/layout/activity_edit_invoice.xml
+++ b/app/src/main/res/layout/activity_edit_invoice.xml
@@ -4,6 +4,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="48dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:src="@drawable/cornerlogo" />
+
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/editinvoice_FrameLayout"
         android:layout_width="match_parent"
