--- a/app/src/main/res/layout/fragment_customer_preview_list.xml
+++ b/app/src/main/res/layout/fragment_customer_preview_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +34,8 @@
 
     <ListView
         android:id="@+id/fragmentcustomerpreviewlist_customerListView"
+        android:divider="@null"
+        android:dividerHeight="9dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight=".03" />
