--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,13 +9,24 @@
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/registration_Registration"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:textColor="#006622"
-            android:textSize="30sp" />
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="48dp"
+                android:divider="@null"
+                android:dividerHeight="0dp"
+                android:src="@drawable/cornerlogo" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/registration_Registration"
+                android:textAppearance="@android:style/TextAppearance.Material.Large"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/register_usernameTextInputLayout"
