--- a/app/src/main/res/layout/fragment_add_line.xml
+++ b/app/src/main/res/layout/fragment_add_line.xml
@@ -1,8 +1,26 @@
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="48dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:src="@drawable/cornerlogo" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/fragmentaddline_DescriptionTextInputLayout"
@@ -24,7 +42,8 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/fragmentaddline_QuantityTextInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <EditText
             android:id="@+id/fragmentaddline_QuantityEditText"
