--- a/app/src/main/res/layout/fragment_invoice.xml
+++ b/app/src/main/res/layout/fragment_invoice.xml
@@ -7,12 +7,26 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <Button
-        android:background="?android:attr/selectableItemBackground"
-        android:id="@+id/fragmentInvoice_GenerateInvoiceButton"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/fragment_generateinvoice_GenerateInvoice" />
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="48dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:src="@drawable/cornerlogo" />
+
+        <Button
+            android:background="?android:attr/selectableItemBackground"
+            android:id="@+id/fragmentInvoice_GenerateInvoiceButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_generateinvoice_GenerateInvoice" />
+    </LinearLayout>
+
 
     <Button
         android:background="?android:attr/selectableItemBackground"
