--- a/app/src/main/res/layout/activity_backup_address_handler.xml
+++ b/app/src/main/res/layout/activity_backup_address_handler.xml
@@ -67,6 +67,7 @@
 
     <Button
         android:background="?android:attr/selectableItemBackground"
+        android:textColor="#5DBCD2"
         android:id="@+id/backup_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,6 +76,7 @@
 
     <Button
         android:background="?android:attr/selectableItemBackground"
+        android:textColor="#5DBCD2"
         android:id="@+id/backup_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
