--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -178,6 +178,7 @@
 
         <Button
             android:id="@+id/register_ContinueButton"
+            android:textColor="#5DBCD2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
@@ -185,6 +186,7 @@
 
         <Button
             android:background="?android:attr/selectableItemBackground"
+            android:textColor="#5DBCD2"
             android:id="@+id/register_CancelButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
