--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -34,6 +34,7 @@
 
                     <Button
                         android:id="@+id/fragmentOptions_LogoutButton"
+                        android:textColor="#5DBCD2"
                         android:layout_width="284dp"
                         android:layout_height="wrap_content"
                         android:background="?android:attr/selectableItemBackground"
